--- a/lambda-http/pom.xml
+++ b/lambda-http/pom.xml
@@ -28,7 +28,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>lambda-rest</artifactId>
+    <artifactId>lambda-http</artifactId>
 
     <build>
         <plugins>
@@ -104,7 +104,7 @@
         </dependency>
         <dependency>
             <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-amazon-lambda-rest</artifactId>
+            <artifactId>quarkus-amazon-lambda-http</artifactId>
         </dependency>
         <dependency>
             <groupId>io.quarkus</groupId>
