--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
         <module>games</module>
         <module>lambda-automa</module>
         <module>lambda-cognito</module>
-        <module>lambda-rest</module>
+        <module>lambda-http</module>
         <module>lambda-websocket</module>
         <module>rest-api</module>
         <module>server</module>
