--- a/lambda-http/src/main/resources/application.properties
+++ b/lambda-http/src/main/resources/application.properties
@@ -31,7 +31,7 @@ bgf.from=info@boardgamefiesta.com
 
 quarkus.http.cors=true
 quarkus.http.cors.headers=Accept,Authorization,Content-Type
-quarkus.http.cors.methods=GET,POST,DELETE,OPTIONS
+quarkus.http.cors.methods=GET,POST,PUT,DELETE,OPTIONS
 
 paypal.mode=live
 
